--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         Locative Sound Art</span></div>
 
     <!-- Author/presenter info -->
-    <div style="grid-row: 5; grid-column: 1 / 4;">Tate Carson</div>
+    <div style="grid-row: 5; grid-column: 1 / 4;">Tate Carson, PhD</div>
     <div style="grid-row: 5; grid-column: 4 / 7;">Assistant Professor of Digital Sound Design</div>
     <notes>
       Introduction; mobile music and locative sound art with smartphones.
@@ -113,12 +113,12 @@
     <div style="grid-row: 4 / 5; grid-column: 1 / 3;"><span class="border">SENSORS</span></div>
     <div class="underline" style="grid-row: 4 / 5; grid-column: 4 / 8;">GPS, gyroscope, microphone integration</div>
 
-    <div style="grid-row: 5 / 6; grid-column: 2 / 4;"><span class="border">NETWORKS</span></div>
-    <div class="underline" style="grid-row: 5 / 6; grid-column: 5 / 8;">Distributed and collaborative music-making</div>
+    <div style="grid-row: 6 / 7; grid-column: 2 / 4;"><span class="border">NETWORKS</span></div>
+    <div class="underline" style="grid-row: 6/7; grid-column: 5 / 8;">Distributed and collaborative music-making</div>
 
     <!-- Bottom row emphasizing the broader impact -->
-    <div style="grid-row: 6 / 7; grid-column: 1 / 7;">Transforming our relationship with sound, environment, and
-      technology</div>
+    <!-- <div style="grid-row: 6 / 7; grid-column: 1 / 7;">Transforming our relationship with sound, environment, and
+      technology</div> -->
 
     <notes>
       A few things that make smartphones particularly interesting for music and sound art are their ubiquity, many
@@ -153,7 +153,7 @@
 
     <!-- Latest work emphasized through full width -->
     <div style="grid-row: 6; grid-column: 2 / 5;"><span class="underline">Resonant Landscapes</span></div>
-    <div style="grid-row: 6; grid-column: 6 / 8;"><span class="border">2023-2024</span></div>
+    <div style="grid-row: 6; grid-column: 6 / 8;"><span class="border">2023-Present</span></div>
 
     <notes>
       * I'll give an overview of the progression of my work over the past few years, starting with And the water receded
@@ -218,9 +218,15 @@
   </div>
 
   <div>
-    <iframe class="responsive-iframe lazyload" src="https://www.youtube.com/embed/es_4M9t9K-4?si=1psU33t4fD6FsvEw"
-      title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-    <div class="slide-count"></div>
+
+    <iframe class="responsive-iframe lazyload"
+      src="https://www.youtube.com/embed/es_4M9t9K-4?si=N1-zD5QbFOD85nhW&amp;start=330" title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="slide-count">
+
+    </div>
 
   </div>
 
@@ -330,15 +336,8 @@
 
   </div>
 
-  <div class="layout" style="
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-      ">
-    <div style="grid-area: 1 / 1 / 2 / 5; justify-content: center;">
-      <h1>Conclusions</h1>
-    </div>
-    <div style="grid-area: 2 / 1 / 5 / 5;">
+  <!-- <div class="layout">
+    <div>
       <ul>
         <li>
           The inner workings of the genetic algorithm are opaque to the
@@ -349,10 +348,12 @@
           There are more creative possibilities with rhythmic synchronization.
         </li>
       </ul>
+
     </div>
+
     <div class="slide-count"></div>
 
-  </div>
+  </div> -->
 
 
 
@@ -464,7 +465,7 @@
   </div>
 
 
-  <div class="layout" style="
+  <!-- <div class="layout" style="
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(6, 1fr);
@@ -500,7 +501,7 @@
     </notes>
     <div class="slide-count"></div>
 
-  </div>
+  </div> -->
 
   <!-- Sounds Aware -->
   <div class="layout"
@@ -709,7 +710,7 @@
 
     <!-- Surrounding text -->
     <div style="grid-row: 1 / 2; grid-column: 1 / 7;"><span class="underline">Resonant Landscapes</span></div>
-    <div style="grid-row: 2 / 4; grid-column: 1 / 2;"><span class="year">2023-2024</span></div>
+    <div style="grid-row: 2 / 4; grid-column: 1 / 2;"><span class="year">2023-Present</span></div>
     <div style="grid-row: 2 / 4; grid-column: 5 / 7;">Locative Sound Art</div>
     <div style="grid-row: 4 / 5; grid-column: 1 / 3;">Ambisonic Field Recording</div>
     <div style="grid-row: 4 / 5; grid-column: 5 / 7;">GPS/Gyroscope</div>
@@ -771,6 +772,7 @@
 
   </div>
 
+
   <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/rl-screenshots/sd-state-parks.png">
     <div>South Dakota State Parks</div>
@@ -781,46 +783,12 @@
       not have been able to record all of these locations without his help.
     </notes>
   </div>
-  <div class="layout" style="grid-template-rows: 75% 25%">
-    <img src="images/rl-screenshots/uni-mi.png">
-    <div>Resonant Landscapes @ UniMi</div>
-    <div class="slide-count"></div>
-    <notes>
-      * As locative media art rather than site-specific art, Resonant Landscapes can be deployed anywhere by mapping
-      state park coordinates onto new locations
-    </notes>
-  </div>
+
+
   <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/rl-screenshots.png" alt="">
 
     <div>User Interactions</div>
-
-    <notes>
-      Here you can see a few screenshots of the app, a user finding a listening spot then activating body oriented
-      tracking.
-    </notes>
-    <div class="slide-count"></div>
-
-  </div>
-
-  <div class="layout" style="
-              grid-template-columns: repeat(4, 1fr);
-              grid-template-rows: repeat(5, 1fr);
-            ">
-    <div style="grid-area: 1 / 1 / 3 / 6; justify-content: center">
-      <h1>Audience Page</h1>
-    </div>
-    <div style="grid-area: 3 / 1 / 6 / 3">
-      <img src="images/palisades.jpeg" width="100%" alt="" />
-    </div>
-    <div style="grid-area: 3 / 3 / 6 / 5">
-      <ul>
-        <li>Interactive campus map with listening spots</li>
-        <li>Audio playback within a 15-meter radius</li>
-        <li>Dynamic soundscapes based on user proximity</li>
-        <li>Body-oriented tracking using smartphone sensors</li>
-      </ul>
-    </div>
 
     <notes>
       * Resonant Landscapes' audience webpage provides an interactive campus map with marked "listening spots" that
@@ -839,6 +807,8 @@
     <div class="slide-count"></div>
 
   </div>
+
+
 
   <div class="layout" style="
                 grid-template-columns: repeat(4, 1fr);
@@ -908,22 +878,11 @@
   <div>
 
     <img src="images/rl-concert/me.png" alt="">
-
-    <notes>
-      In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
-      works that premiered during a public concert at the Madison Area Arts Council.
-    </notes>
-    <div class="slide-count"></div>
-
-  </div>
-
-  <div>
     <img src="images/rl-concert/daniel.png" alt="">
 
     <notes>
       In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
-      works
-      that premiered during a public concert at the Madison Area Arts Council.
+      works that premiered during a public concert at the Madison Area Arts Council.
     </notes>
     <div class="slide-count"></div>
 
@@ -983,6 +942,15 @@
 
   </div>
 
+  <div class="layout" style="grid-template-rows: 75% 25%">
+    <img src="images/rl-screenshots/uni-mi.png">
+    <div>Resonant Landscapes @ UniMi</div>
+    <div class="slide-count"></div>
+    <notes>
+      * As locative media art rather than site-specific art, Resonant Landscapes can be deployed anywhere by mapping
+      state park coordinates onto new locations
+    </notes>
+  </div>
 
   <!-- Impact statement gets strong position at bottom -->
   <div
@@ -1009,11 +977,13 @@
     <div class="slide-count"></div>
 
   </div>
-  <div id="citations">
-    <h2>References</h2>
+  <div class=layout style='grid-template-columns: 50% 50%;'>
+    <div>Questions?</div>
+    <div>tatecarson.com tate.carson@pm.me</div>
     <div class="slide-count"></div>
 
   </div>
+
 
 </body>
 
