Improve image layout in index.html for better alignment and responsiveness

--- a/index.html
+++ b/index.html
@@ -875,10 +875,10 @@
 
   </div>
 
-  <div>
+  <div style="display: flex; justify-content: space-between;">
 
-    <img src="images/rl-concert/me.png" alt="">
-    <img src="images/rl-concert/daniel.png" alt="">
+    <img src="images/rl-concert/me.png" alt="" style="width: 48%;">
+    <img src="images/rl-concert/daniel.png" alt="" style="width: 48%;">
 
     <notes>
       In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
